--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Path Mirror</title>
+    <title>Path Mirror 🪞</title>
     <link rel="stylesheet" href="styles.css">
     <!-- emoji favicon -->
     <link
         rel="icon"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🪞</text></svg>"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎄</text></svg>"
     />
 </head>
 <body>
+    <div class="snowfall"></div>
     <div class="container">
         <h1>Path Mirror 🪞</h1>
+        <div class="christmas-lights"></div>
         
         <div class="mirror-selection">
             <label>Mirror Selection:</label>
@@ -28,13 +30,15 @@
             </div>
         </div>
 
-        <textarea id="input" rows="10" placeholder="Paste your chassis commands here..."></textarea>
+        <div class="present-box">
+            <textarea id="input" rows="10" placeholder="Paste your chassis commands here..."></textarea>
+        </div>
 
         <div class="button-container">
             <div></div>
             <div class="button-group">
-                <button id="clearButton" class="button button-red">Clear</button>
-                <button id="copyButton" class="button button-blue">Copy Results</button>
+                <button id="clearButton" class="button button-red">Clear ❄️</button>
+                <button id="copyButton" class="button button-green">Copy Results 🎁</button>
             </div>
         </div>
 
@@ -44,13 +48,17 @@
     </div>
 	
     <div class="info-section">
-        <p>
-            Currently in competing in VEX High Stakes and<br>
-            using a library like LemLib? This website will mirror
-            your paths to the other alliance! Just paste
-            all of your code and it will convert recognized movements (chassis.moveToPoint or chassis.turnToPoint). 
-        </p>
-        <img src="image.png" alt="Sample Image">
+        <div class="info-card">
+            <p>
+                Currently in competing in VEX High Stakes and<br>
+                using a library like LemLib? This website will mirror
+                your paths to the other alliance! Just paste
+                all of your code and it will convert recognized movements (chassis.moveToPoint or chassis.turnToPoint). 
+				
+				Have a great holiday build season and best of luck to your competitions in the New Year!
+            </p>
+            <img src="image.png" alt="Sample Image">
+        </div>
     </div>
 
     <script src="main.js"></script>
